@@ -10,6 +10,10 @@ int nl_init_event_handler(void);
 
 int nl_init_dump_handler(void);
 
+int nl_init_overrun_handler(void);
+
+int nl_overrun_request_resync(void);
+
 void nl_resize_socket_buffer(struct nfct_handle *h);
 
 int nl_dump_conntrack_table(void);
